--- a/team/index.html
+++ b/team/index.html
@@ -216,7 +216,7 @@
                 .st-title{font-weight:800}
               }
 
-              .rec-text{font-size:11pt; font-weight:500; color:#444; margin-top:24px; line-height:1.5;}
+              .rec-text{font-size:10pt; font-weight:450; color:#666666; margin-top:24px; line-height:1.6;}
 
               .group-results-header{font-size:18pt; font-weight:800; color:#444; margin-bottom:8px;}
 
@@ -539,9 +539,9 @@
   display: flex;
   align-items: center;
   margin: 6px 0;
-  font-size: 17px;
-  font-weight: 600; /* increased from 500 */
-  color: #444;
+  font-size: 16px;
+  font-weight: 500; /* increased from 500 */
+  color: #666666;
 }
         </style>
         <style>
@@ -722,7 +722,7 @@ button:disabled,
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">before you start</h2>
                 <p class="intro">
-                    You will get 35 short statements. Read each one and think about how you act in these situations. Then score yourself from 1 to 5. Be honest with yourself. This app is a mirror to show you what you’re good at and what you can do better
+                    You will get 35 statements. Read each statement and think about how you act in these situations. Then score yourself from 1 to 5. Be honest with yourself. This app is a mirror to show you what you’re good at and what you can do better
                 </p>
                 <h2 class="section-title">about the scoring</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
@@ -837,7 +837,7 @@ button:disabled,
         <!-- Modal -->
         <div class="modal-backdrop" id="eligBackdrop" style="position: fixed; inset: 0; background: rgba(0, 0, 0, 0.35); display: none; align-items: center; justify-content: center; z-index: 50;">
             <div class="modal" style="width: min(92vw, 520px); background: #fff; border-radius: 18px; padding: 20px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);">
-                <h3 style="margin: 0 0 10px 0; font-size: 18px;">please confirm V2</h3>
+                <h3 style="margin: 0 0 10px 0; font-size: 18px;">please confirm</h3>
                 <p style="margin: 0 0 18px 0; font-size: 16px; line-height: 1.5; color: #222;">my peer knows me well and has worked in BED for at least 12 months</p>
                 <div class="row-btns" style="display: flex; justify-content: flex-end; gap: 10px;">
                     <button class="btn-secondary" id="eligCancel">Cancel</button>
@@ -1891,7 +1891,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <!-- Custom "Are you sure?" confirmation modal (white, left text, right buttons) v4 -->
 <div id="confirmModal" role="dialog" aria-modal="true" aria-labelledby="confirmTitle" aria-describedby="confirmText">
   <div class="modal-box">
-    <div id="confirmTitle" class="title">Are you sure?</div>
+    <div id="confirmTitle" class="title">you want to submit now?</div>
     <div id="confirmText" class="text">Your assessment scores will be automatically saved.</div>
     <div class="actions">
       <button id="cancelConfirm" class="btn-cancel" type="button">No</button>
