--- a/peer/index.html
+++ b/peer/index.html
@@ -674,7 +674,7 @@ button:disabled,
             <div class="progress" id="progressHeader"><span class="dot"></span><span class="dot"></span><span class="dot"></span> <span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
             <!-- PAGE 1 -->
             <section id="welcome">
-                <h2 class="section-title">peer reviewer information</h2>
+                <h2 class="section-title">peer reviewer</h2>
                 <div class="row"><label for="nick">name</label><input id="nick"  placeholder="your name"></div>
                <div class="row">
   <label for="email">email</label>
@@ -698,8 +698,8 @@ button:disabled,
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">team member information</h2>
-                <p class="intro">You are invited to review another team member. To do this you must know the person well and have worked in BED for at least 12 months</p>
+                <h2 class="section-title">team member</h2>
+                <p class="intro">You have been invited to review another team member. To do this you must know the person well and have worked in BED for at least 12 months</p>
                 <div class="row"><label for="peerName">name</label><input id="peerName"  placeholder="team member name"></div>
                 <div class="row"><label for="peerEmail">email</label><input id="peerEmail" type="email"  placeholder="team member email"></div>
                 <div class="row">
@@ -722,7 +722,7 @@ button:disabled,
             <section id="instructions" style="display: none;">
                 <h2 class="section-title">before you start</h2>
                 <p class="intro">
-                You will get 35 statements. Read each statement and think about how the person acts in these situations. Then score the person from 1 to 5. Be honest and sincere. This app is a mirror to show people what they're good at and what they can do better
+                You will get 35 statements. Read each statement and think about how the person acts in these situations. Then give a score from 1 to 5. Be honest and sincere. This app is a mirror to show our team members what they're good at and what they can do better
                 </p>
                 <h2 class="section-title">about the scoring</h2>
                 <ul class="scale-list" style="list-style: none; padding: 0; margin: 10px 0;">
@@ -838,7 +838,7 @@ button:disabled,
         <div class="modal-backdrop" id="eligBackdrop" style="position: fixed; inset: 0; background: rgba(0, 0, 0, 0.35); display: none; align-items: center; justify-content: center; z-index: 50;">
             <div class="modal" style="width: min(92vw, 520px); background: #fff; border-radius: 18px; padding: 20px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);">
                 <h3 style="margin: 0 0 10px 0; font-size: 18px;">please confirm</h3>
-                <p style="margin: 0 0 18px 0; font-size: 16px; line-height: 1.5; color: #222;">my peer knows me well and has worked in BED for at least 12 months</p>
+                <p style="margin: 0 0 18px 0; font-size: 16px; line-height: 1.5; color: #222;">I know this person well and worked in BED for at least 12 months</p>
                 <div class="row-btns" style="display: flex; justify-content: flex-end; gap: 10px;">
                     <button class="btn-secondary" id="eligCancel">Cancel</button>
                     <button id="eligOk">OK</button>
